--- a/localisation/dec1_national_ability_l_english.yml
+++ b/localisation/dec1_national_ability_l_english.yml
@@ -488,7 +488,7 @@
 
  # Rum
 
- dec1_who_stole_the_rum: "Who Stole the Rum?"
+ dec1_anatolian_islam: "Anatolian Islam" # Previously 'Who Stole The Rum?'
 
  # Russia
 
