--- a/localisation/dec1_decisions_l_english.yml
+++ b/localisation/dec1_decisions_l_english.yml
@@ -416,6 +416,12 @@
  punjab_nation_title: "@PUN Kingdom of Punjab"
  punjab_nation_desc: "We must unite the Punjabi people if we are ever to be able to stand against foreign invaders. Together we will build a modern state with armies capable of taking on the many enemies who would attack us for our lands, and who would do anything to extinguish our faith!"
 
+ rajput_nation_title: "@RJP Unite the Rajputs"
+ rajput_nation_desc: "The lands of Rajputana have been shattered and weak ever since the Muslim invasion centuries ago. We must reclaim the great cities of the great dynasties that came before us and unite the princes of Rajputana! "
+
+ romanian_nation_title: "@RMN Romania"
+ romanian_nation_desc: "The last vestiges of the Roman Empire are gone or captured by us, and although many would make claim to the imperial crown, we are its true descendants. With all the ancestral lands united under our wise rule, we can usher in a new era of prosperity. We are the children of Rome - the people of Romania!"
+
  # Colonial Nations
 
  brazil_nation_title: "@BRZ Brazilian Nation"
